# qwen3-tts-axera-russian

./: .gitignore  LICENSE  README.md  README_RU.md  README_ZH.md
cpp/src/runner/: LLM_Qwen3TTS.hpp
docs/: ARCHITECTURE.md  BENCHMARKS.md  MODEL_CONVERSION.md  SETUP.md
dual_npu/: code_predictor_server.py  launch_qwen3_tts.sh  llama_cpp_bindings.py  llamacpp_talker_server.py  tts_client.py  vocoder_server.py
dual_npu/code_predictor_cpp/: CMakeLists.txt  code_predictor_server.cpp  extract_weights.py  npy_reader.h  setup_and_build.sh
dual_npu/code_predictor_ggml/: code_pred_server.cpp
scripts/: convert_talker_gguf.py  convert_vocoder_axmodel.py  convert_vocoder_rknn.py  encode_reference_audio.py  export_code_predictor_onnx.py  export_code_predictor_weights.py  export_vocoder_traced.py  extract_embeddings.py  extract_talker_as_qwen3.py
